# pasta-solidity

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
contracts/: package.json
contracts/contracts/libraries/: Pallas.sol  Vesta.sol
contracts/contracts/mocks/: TestPallas.sol  TestVesta.sol
contracts/deploy/: 00_cape.ts
contracts/rust/: Cargo.toml
contracts/rust/src/: lib.rs  pallas.rs  types.rs  vesta.rs
contracts/rust/tests/: ethereum_test.rs
