[package]
name = "cap-rust-sandbox"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]

arbitrary = { version="1.0", features=["derive"] }

ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
serde_json = "1.0.67"
bincode = "1.3.3"

ark-std = "0.3.0"
ark-serialize = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-pallas = "0.3.0"

hex = "0.4.3"
lazy_static = "1.4.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }
anyhow = "1.0.39"
num-traits = "0.2.14"
num-derive = "0.3.3"
rand_chacha = "0.3.1"
generic-array = { version = "0.14.4", features = ["serde"] }
sha3 = "0.9.1"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
futures = "0.3.16"
strum_macros = "0.20.1"
async-recursion = "1.0.0"
snafu = { version = "0.7", features = ["backtraces"] }


[dev-dependencies]
proptest = "1.0.0"
